added logic to change colour of hovered over div, and added a reset and pixel density buttons

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <script src="script.js" defer></script>
   </head>
   <body>
+    <div class="size btn-container">
+      <button>Change Pad Pixel Density</button>
+    </div>
     <section id="container"></section>
+    <div class="reset btn-container">
+      <button>Reset</button>
+    </div>
   </body>
 </html>
