--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <div class="size btn-container">
       <button>Change Pad Pixel Density</button>
     </div>
+    <div class="color btn-container">
+      <label for="favcolor" class="btn-container">Select Pen Colour</label>
+      <input type="color" id="colorSelector" name="favcolor" value="#ff0000" />
+    </div>
     <section id="container"></section>
     <div class="reset btn-container">
       <button>Reset</button>
